[package]
name = "backrust"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = { version = "2.2.8", features = ["mysql", "serde_json", "chrono"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
tokio = { version = "1.44.1", features = ["full"] }
axum = "0.8.1"
chrono = { version = "0.4", features = ["serde"] }  # Adicionado para suporte a datas
